# data-engineer-handbook

bootcamp-solutions/1-dimensional-data-modeling/: README.md  example.env
bootcamp-solutions/1-dimensional-data-modeling/homework/: 2_cumulative_one_query.sql  4_scd_one_query.sql  5_scq.sql
bootcamp-solutions/2-fact-data-modeling/homework/: 1_deduplicate.sql  2_ddl__user_devices_cumulated.sql  2_user_devices_cumulated.sql  3_datelist_int.sql  5_cumulated_host_activity.sql  6_ddl__host_activity_reduced.sql  6_host_activity_reduced__incremental.sql  6_host_activity_reduced__one_query.sql
bootcamp-solutions/3-spark-fundamentals/: Dockerfile  Makefile
bootcamp-solutions/3-spark-fundamentals/homework/: feedback_part1.md  hmwrk.py
bootcamp-solutions/3-spark-fundamentals/notebooks/: event_data_pyspark.ipynb  homework.ipynb
bootcamp-solutions/3-spark-fundamentals/src/tests/: a.md  (+1 more)
bootcamp-solutions/4-apache-flink-training/: .gitignore
bootcamp-solutions/4-apache-flink-training/homework/: Makefile  README.md  docker-compose.yml  events_generator.py  flink-env.env  kafka_producer.py  pyproject.toml  requirements.txt
bootcamp-solutions/4-apache-flink-training/homework/sql/: avg_events_per_user.sql  by_host.sql  postgres_ddl.sql
bootcamp-solutions/4-apache-flink-training/homework/src/job/: flink_job.py
bootcamp-solutions/4-apache-flink-training/homework/submission/: feedback.md
bootcamp-solutions/4-applying-analytical-patterns/homework/: 1_state_change_tracking.sql  2_grouping_sets.sql  2_player_and_team.sql  2_team.sql  4_window_based_pattern_2.sql
(+23 files in other folders)
